# Discord-Bot-Starter

./: CMakeLists.txt  main.cpp
